--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <p>I'm the instructor for the class.</p>
         </div>
         <!-- End copy/paste here -->
+        <div>
+            <h1>Alejandro Biancucci</h1>
+            <p>I am a Coding Temple student.</p>
+
+        </div>
     </body>
 </html>
